ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_blocked_card_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
assertion_line: 295
expression: map
---
Board: Delivery   [1/1]   auto-move ON
○ Todo (1)                                                                                                          ⋯ +
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃🔒 #dep01                                                                                                              ┃
┃Ship the migration 🔒[ock-1]                                                                                           ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
