ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_card_agent_chips_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
assertion_line: 422
expression: map
---
Board: Delivery   [1/1]   auto-move ON
Agent for "Refactor" (↑↓ pick, Enter → profile):◈ Running ↦running (⋯ +│◈ Failed ↦failed (1)⋯ +│◈ Done ↦done (1)    ⋯ +
▶ claude     codex     copilot (dispatch gated — F8)   ────────────────│───────────────────────│────────────────────────
┏━━━━━━━━━━━━━━━━━━━━━┓│╭─────────────────────╮│╭─────────────────────╮│╭─────────────────────╮│╭──────────────────────╮
┃#bk01                ┃││#q002                │││#r003                │││#f004                │││✓ #d005               │
┃Write the spec       ┃││Wire the RPC         │││Build the board      │││Flaky migration      │││Ship the tables       │
┃                     ┃││                     │││                     │││                     │││                      │
┃                     ┃││                     │││                     │││                     │││                      │
┗━━━━━━━━━━━━━━━━━━━━━┛│╰─────────────────────╯│╰─────────────────────╯│╰─────────────────────╯│╰──────────────────────╯
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
