ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_card_repo_at_open_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
Board: Delivery   [1/1]   auto-move ON
↵:run/rerun  a:attach  X:cancel  t:timeline  e:edit  d:remove  s:squad  w:depends-on  R:auto-run  ⇧↑↓:move card  n:add c
Repo for "Refactor" (@ to search, Enter pick — REQUIRED): ↦running (⋯ +│◈ Failed ↦failed (1)⋯ +│◈ Done ↦done (1)    ⋯ +
@ [scratch]  ★ainb   widget  ──────────────────│───────────────────────│───────────────────────│────────────────────────
┏━━━━━━━━━━━━━━━━━━━━━┓│╭─────────────────────╮│╭─────────────────────╮│╭─────────────────────╮│╭──────────────────────╮
┃#bk01                ┃││#q002                │││#r003                │││#f004                │││✓ #d005               │
┃Write the spec       ┃││Wire the RPC         │││Build the board      │││Flaky migration      │││Ship the tables       │
┃                     ┃││                     │││                     │││                     │││                      │
┃◇ None               ┃││◇ None               │││◇ None               │││◇ None               │││◇ None                │
┗━━━━━━━━━━━━━━━━━━━━━┛│╰─────────────────────╯│╰─────────────────────╯│╰─────────────────────╯│╰──────────────────────╯
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
