ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_card_repo_narrow_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
Board: Delivery   [1/1]   auto-move ON
Repo for "Refactor" (@ to search, Enter pick — REQUIRED): +
@ [scratch]  ★ainb   widget  ────────────│──────────────────
┏━━━━━━━━━━━┓│╭───────────╮│╭───────────╮│╭────────────────╮
┃#bk01      ┃││#q002      │││#r003      │││#f004           │
┃Write the s┃││Wire the RP│││Build the b│││Flaky migration │
┃pec        ┃││C          │││oard       │││                │
┃           ┃││           │││           │││                │
┗━━━━━━━━━━━┛│╰───────────╯│╰───────────╯│╰────────────────╯
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
             │             │             │
