ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_error_board_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
  Couldn't load boards — daemon error: workspace/subscribe rejected
