ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_five_column_board_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
Board: Delivery   [1/1]   auto-move ON
↵:run/rerun  a:attach  X:cancel  t:timeline  e:edit  d:remove  s:squad  w:depends-on  R:auto-run  ⇧↑↓:move card  n:add c
○ Backlog (1)       ⋯ +│◈ Queued ↦queued (1)⋯ +│◈ Running ↦running (⋯ +│◈ Failed ↦failed (1)⋯ +│◈ Done ↦done (1)    ⋯ +
───────────────────────│───────────────────────│───────────────────────│───────────────────────│────────────────────────
┏━━━━━━━━━━━━━━━━━━━━━┓│╭─────────────────────╮│╭─────────────────────╮│╭─────────────────────╮│╭──────────────────────╮
┃#bk01                ┃││#q002                │││#r003                │││#f004                │││✓ #d005               │
┃Write the spec       ┃││Wire the RPC         │││Build the board      │││Flaky migration      │││Ship the tables       │
┃                     ┃││                     │││                     │││                     │││                      │
┃◇ None               ┃││◇ None               │││◇ None               │││◇ None               │││◇ None                │
┗━━━━━━━━━━━━━━━━━━━━━┛│╰─────────────────────╯│╰─────────────────────╯│╰─────────────────────╯│╰──────────────────────╯
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
                       │                       │                       │                       │
