ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_loading_board_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
  Loading boards…
