ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_boards__render_squad_card_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_boards.rs
expression: map
---
Board: Delivery   [1/1]   auto-move ON
◈ Running ↦running (1)                                                                                              ⋯ +
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃#sqd01                                                                                                                ┃
┃Fan this out 👥[lead:running m1:queued] ⏵                                                                              ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
